--- a/index.html
+++ b/index.html
@@ -218,13 +218,13 @@
         <div class="header_tool">
           <ul>
             <li class="all_menu">
-              <a href="#"><i class="ri-menu-line"></i>&nbsp;전체메뉴</a>
+              <a href="javascript:;"><i class="ri-menu-line"></i>&nbsp;전체메뉴</a>
             </li>
             <li>
-              <a href="#"><i class="ri-global-line"></i>&nbsp;ENG</a>
+              <a href="javascript:;"><i class="ri-global-line"></i>&nbsp;ENG</a>
             </li>
             <li>
-              <a href="#"><i class="ri-search-line"></i></a>
+              <a href="javascript:;"><i class="ri-search-line"></i></a>
             </li>
           </ul>
         </div>
