--- a/index.html
+++ b/index.html
@@ -1,52 +1,52 @@
 <!DOCTYPE html>
 <html lang="kr">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="한국인터넷진흥원" />
-    <meta name="robot" content="follow" />
-    <meta name="description" content="한국인터넷진흥원입니다. 강혜주의 반응형 프로젝트" />
-    <meta name="author" content="강혜주" />
-    <meta name="keyword" content="포트폴리오, 강혜주, 프론트엔드" />
-    <meta property="og:title" content="혜주의 포트폴리오" />
-    <meta property="og:description" content="혜주의 관공서 포트폴리오" />
-    <meta property="og:url" content="https://hejo47.github.io/KISAweb/" />
-    <meta property="og:image" content="img/main/img_one.png" />
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;500;700;900&family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="한국인터넷진흥원">
+    <meta name="robot" content="follow">
+    <meta name="description" content="한국인터넷진흥원입니다. 강혜주의 반응형 프로젝트">
+    <meta name="author" content="강혜주">
+    <meta name="keyword" content="포트폴리오, 강혜주, 프론트엔드">
+    <meta property="og:title" content="혜주의 포트폴리오">
+    <meta property="og:description" content="혜주의 관공서 포트폴리오">
+    <meta property="og:url" content="https://hejo47.github.io/KISAweb/">
+    <meta property="og:image" content="img/main/img_one.png">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;500;700;900&family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.7/jquery.fullpage.min.css" integrity="sha512-q54FvbV+gGBn+NvgaD4gpJ7w4wrO00DgW7Rx503PIhrf0CuMwLOwbS+bXgOBFSob+6GVy1HDPfaRLJ8w2jiS4g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.7/jquery.fullpage.min.css" integrity="sha512-q54FvbV+gGBn+NvgaD4gpJ7w4wrO00DgW7Rx503PIhrf0CuMwLOwbS+bXgOBFSob+6GVy1HDPfaRLJ8w2jiS4g==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.7/jquery.fullpage.min.js" integrity="sha512-bxzECOBohzcTcWocMAlNDE2kYs0QgwGs4eD8TlAN2vfovq13kfDfp95sJSZrNpt0VMkpP93ZxLC/+WN/7Trw2g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <title>KISA 한국인터넷진흥원</title>
     <!-- favicon -->
-    <link rel="shortcut icon" href="./img/logo/favicon.ico" type="image/x-icon" />
-    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png" />
-    <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png" />
-    <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png" />
-    <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png" />
-    <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png" />
-    <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png" />
-    <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png" />
-    <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png" />
-    <link rel="icon" type="image/png" sizes="192x192" href="/android-icon-192x192.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link rel="manifest" href="/manifest.json" />
-    <meta name="msapplication-TileColor" content="#ffffff" />
-    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png" />
-    <meta name="theme-color" content="#ffffff" />
+    <link rel="shortcut icon" href="./img/logo/favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
   </head>
   <body>
     <header class="pc">
       <div class="header_wrapper">
         <div class="logo">
-          <a href="#"><img src="img/logo/logo_w.png" alt="logo" class="logoImg" /></a>
+          <a href="#"><img src="img/logo/logo_w.png" alt="logo" class="logoImg"></a>
         </div>
         <ul class="header_menu">
           <li class="depth1">
@@ -233,7 +233,7 @@
     <header class="mo">
       <div class="header_wrapper">
         <div class="logo">
-          <a href="#"><img src="img/logo/logo.png" alt="logo" class="logoImg" /></a>
+          <a href="#"><img src="img/logo/logo.png" alt="logo" class="logoImg"></a>
         </div>
         <ul class="header_menu">
           <li class="depth1">
@@ -421,32 +421,32 @@
       <section class="section first">
         <ul class="main_slide_wrapper">
           <li class="main_slide1 main_slide_item active">
-            <img src="img/main/main_slide_01.jpg" alt="1" />
+            <img src="img/main/main_slide_01.jpg" alt="1">
             <div class="slide_text">
               <span class="slide_p">Korea Internet & Security Agency</span>
               <p class="main_slide_p">
-                [<span class="slide_blue">KISA</span>]는 <br />안전하고 신뢰할수 있는<br />
+                [<span class="slide_blue">KISA</span>]는 <br>안전하고 신뢰할수 있는<br>
                 <span class="slide_green">디지털 미래사회</span>를 선도합니다.
               </p>
             </div>
           </li>
           <li class="main_slide2 main_slide_item">
-            <img src="img/main/main_slide_02.jpg" alt="2" />
+            <img src="img/main/main_slide_02.jpg" alt="2">
             <div class="slide_text">
               <span class="slide_p">Korea Internet & Security Agency</span>
               <p class="main_slide_p">
-                [<span class="slide_blue">KISA</span>]와 <br />함께 가꾸는 미래 인터넷<br />
+                [<span class="slide_blue">KISA</span>]와 <br>함께 가꾸는 미래 인터넷<br>
                 <span class="slide_green">함께 꿈꾸는 안전한 세상</span>
               </p>
             </div>
           </li>
           <li class="main_slide3 main_slide_item">
-            <img src="img/main/main_slide_03.jpg" alt="3" />
+            <img src="img/main/main_slide_03.jpg" alt="3">
             <div class="slide_text">
               <span class="slide_p">Korea Internet & Security Agency</span>
               <p class="main_slide_p">
-                <span class="slide_green">안전한 디지털 미래</span><br />
-                [<span class="slide_blue">KISA</span>]가 함께 합니다.<br />
+                <span class="slide_green">안전한 디지털 미래</span><br>
+                [<span class="slide_blue">KISA</span>]가 함께 합니다.<br>
               </p>
             </div>
           </li>
@@ -459,26 +459,26 @@
         <ul class="mainBanner container">
           <li id="one_sq">
             <a href="#">
-              <div class="hover_prev"><img src="img/main/hover_prev1.png" alt="" /></div>
-              <div class="hover_img"><img src="img/main/hover_10.png" alt="" /></div>
+              <div class="hover_prev"><img src="img/main/hover_prev1.png" alt=""></div>
+              <div class="hover_img"><img src="img/main/hover_10.png" alt=""></div>
             </a>
           </li>
           <li id="two_sq">
             <a href="#">
-              <div class="hover_prev"><img src="img/main/hover_prev2.png" alt="" /></div>
-              <div class="hover_img"><img src="img/main/hover_11.png" alt="" /></div>
+              <div class="hover_prev"><img src="img/main/hover_prev2.png" alt=""></div>
+              <div class="hover_img"><img src="img/main/hover_11.png" alt=""></div>
             </a>
           </li>
           <li id="three_sq">
             <a href="#">
-              <div class="hover_prev"><img src="img/main/hover_prev3.png" alt="" /></div>
-              <div class="hover_img"><img src="img/main/hover_12.png" alt="" /></div>
+              <div class="hover_prev"><img src="img/main/hover_prev3.png" alt=""></div>
+              <div class="hover_img"><img src="img/main/hover_12.png" alt=""></div>
             </a>
           </li>
           <li id="four_sq">
             <a href="#">
-              <div class="hover_prev"><img src="img/main/hover_prev4.png" alt="" /></div>
-              <div class="hover_img"><img src="img/main/hover_13.png" alt="" /></div>
+              <div class="hover_prev"><img src="img/main/hover_prev4.png" alt=""></div>
+              <div class="hover_img"><img src="img/main/hover_13.png" alt=""></div>
             </a>
           </li>
         </ul>
@@ -534,13 +534,13 @@
             </div>
             <div class="second_slide_small2">
               <div class="small2_text">
-                <h2 class="kisa_text">KISA<br />지식플랫폼</h2>
+                <h2 class="kisa_text">KISA<br>지식플랫폼</h2>
                 <h6 class="business_text">Knowledge platform</h6>
-                <a href="#" class="search_a">연구보고서</a><br />
+                <a href="#" class="search_a">연구보고서</a><br>
                 <a href="#" class="search_b">기술안내서</a>
               </div>
               <div class="small2_img">
-                <img src="img/main/ic_ knowledge_1.png" alt="knowledge_1" />
+                <img src="img/main/ic_ knowledge_1.png" alt="knowledge_1">
               </div>
             </div>
           </div>
@@ -553,14 +553,14 @@
             <div class="second_slide_small cyber">
               <ul>
                 <li>
-                  <a href="#"><img src="img/main/cyber.jpg" alt="hacking" /></a>
+                  <a href="#"><img src="img/main/cyber.jpg" alt="hacking"></a>
                 </li>
               </ul>
             </div>
             <div class="second_slide_small2 service">
               <ul>
                 <li>
-                  <a href="#"><img src="img/main/img_hacking_02.jpg" alt="hacking" /></a>
+                  <a href="#"><img src="img/main/img_hacking_02.jpg" alt="hacking"></a>
                 </li>
               </ul>
             </div>
@@ -578,40 +578,40 @@
               </div>
               <ul>
                 <li class="service_item">
-                  <a href="#"> <img src="img/main/icon1.png" /> <span>내PC돌보미</span></a>
+                  <a href="#"> <img src="img/main/icon1.png"> <span>내PC돌보미</span></a>
                 </li>
                 <li class="service_item">
-                  <a href="#"> <img src="img/main/icon2.png" /> <span>중소기업홈페이지 보안강화</span></a>
+                  <a href="#"> <img src="img/main/icon2.png"> <span>중소기업홈페이지 보안강화</span></a>
                 </li>
                 <li class="service_item">
-                  <a href="#"> <img src="img/main/icon3.png" /> <span>다중이용 기업서비스 취약점 점검</span></a>
+                  <a href="#"> <img src="img/main/icon3.png"> <span>다중이용 기업서비스 취약점 점검</span></a>
                 </li>
                 <li class="service_item">
-                  <a href="#"> <img src="img/main/icon4.png" /> <span>중소기업 SW보안 약점 진단</span></a>
+                  <a href="#"> <img src="img/main/icon4.png"> <span>중소기업 SW보안 약점 진단</span></a>
                 </li>
                 <li class="service_item">
-                  <a href="#"> <img src="img/main/icon5.png" /> <span>사이버보안 빅데이터센터 이용</span></a>
+                  <a href="#"> <img src="img/main/icon5.png"> <span>사이버보안 빅데이터센터 이용</span></a>
                 </li>
                 <li class="service_item">
-                  <a href="#"> <img src="img/main/icon6.png" /> <span>정보보호전문서비스기업</span></a>
+                  <a href="#"> <img src="img/main/icon6.png"> <span>정보보호전문서비스기업</span></a>
                 </li>
                 <li class="service_item">
-                  <a href="#"> <img src="img/main/icon7.png" /> <span>정보보호 및 개인정보보호 관리체계 인증</span></a>
+                  <a href="#"> <img src="img/main/icon7.png"> <span>정보보호 및 개인정보보호 관리체계 인증</span></a>
                 </li>
                 <li class="service_item">
-                  <a href="#"> <img src="img/main/icon8.png" /> <span>클라우드 보안인증</span></a>
+                  <a href="#"> <img src="img/main/icon8.png"> <span>클라우드 보안인증</span></a>
                 </li>
                 <li class="service_item">
-                  <a href="#"> <img src="img/main/icon9.png" /> <span>융합보안리빙랩</span></a>
+                  <a href="#"> <img src="img/main/icon9.png"> <span>융합보안리빙랩</span></a>
                 </li>
                 <li class="service_item">
-                  <a href="#"> <img src="img/main/icon10.png" /> <span>loT보안인증</span></a>
+                  <a href="#"> <img src="img/main/icon10.png"> <span>loT보안인증</span></a>
                 </li>
                 <li class="service_item">
-                  <a href="#"> <img src="img/main/icon11.png" /> <span>loT보안 테스트베드</span></a>
+                  <a href="#"> <img src="img/main/icon11.png"> <span>loT보안 테스트베드</span></a>
                 </li>
                 <li class="service_item">
-                  <a href="#"> <img src="img/main/icon12.png" /> <span>KISA 사이버보안교육</span></a>
+                  <a href="#"> <img src="img/main/icon12.png"> <span>KISA 사이버보안교육</span></a>
                 </li>
               </ul>
             </div>
@@ -782,19 +782,19 @@
               <div class="news_con">
                 <div class="news">
                   <div class="news_wrap">
-                    <img src="img/main/photonews1.jpg" alt="photonews1" />
+                    <img src="img/main/photonews1.jpg" alt="photonews1">
                     <p>KISA, 세계적 석학과 '데이터 리더십 미팅' 가져</p>
                   </div>
                   <div class="news_wrap">
-                    <img src="img/main/photonews2.jpg" alt="photonews2" />
+                    <img src="img/main/photonews2.jpg" alt="photonews2">
                     <p>KISA, 이전 공공기관 노사 공동 지역 유기동물 보호 기부금 전달</p>
                   </div>
                   <div class="news_wrap">
-                    <img src="img/main/photonews3.jpg" alt="photonews3" />
+                    <img src="img/main/photonews3.jpg" alt="photonews3">
                     <p>KISA, 이전 공공기관 노사 공동 지역 유기동물 보호 기부금 전달</p>
                   </div>
                   <div class="news_wrap">
-                    <img src="img/main/photonews4.jpeg" alt="photonews4" />
+                    <img src="img/main/photonews4.jpeg" alt="photonews4">
                     <p>KISA, 이전 공공기관 노사 공동 지역 유기동물 보호 기부금 전달</p>
                   </div>
                 </div>
@@ -807,7 +807,7 @@
                 <h4>사회 공헌</h4>
               </div>
               <div class="society_wrap">
-                <img src="img/main/society.jpg" alt="society_img" />
+                <img src="img/main/society.jpg" alt="society_img">
               </div>
             </article>
             <article class="sns_tab">
@@ -816,10 +816,10 @@
               </div>
               <div class="sns_wrap">
                 <ul>
-                  <li><img src="img/main/ic_sns_youtube.png" alt="society_img" /></li>
-                  <li><img src="img/main/ic_sns_kakao.png" alt="society_img" /></li>
-                  <li><img src="img/main/ic_sns_blog.png" alt="society_img" /></li>
-                  <li><img src="img/main/ic_sns_facebook.png" alt="society_img" /></li>
+                  <li><img src="img/main/ic_sns_youtube.png" alt="society_img"></li>
+                  <li><img src="img/main/ic_sns_kakao.png" alt="society_img"></li>
+                  <li><img src="img/main/ic_sns_blog.png" alt="society_img"></li>
+                  <li><img src="img/main/ic_sns_facebook.png" alt="society_img"></li>
                 </ul>
               </div>
             </article>
@@ -836,10 +836,10 @@
               <div class="notice_tab">
                 <div class="notice_con">
                   <div class="notice_wrap">
-                    <img src="img/main/notice.png" alt="notice1" />
+                    <img src="img/main/notice.png" alt="notice1">
                   </div>
                   <div class="notice_wrap">
-                    <img src="img/main/notice2.png" alt="notice2" />
+                    <img src="img/main/notice2.png" alt="notice2">
                   </div>
                 </div>
               </div>
