--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="한국인터넷진흥원">
     <meta name="robot" content="follow">
-    <meta name="description" content="한국인터넷진흥원입니다. 강혜주의 반응형 프로젝트">
+    <meta name="description" content="강혜주의 반응형 프로젝트">
     <meta name="author" content="강혜주">
     <meta name="keyword" content="포트폴리오, 강혜주, 프론트엔드">
     <meta property="og:title" content="혜주의 포트폴리오">
@@ -459,26 +459,26 @@
         <ul class="mainBanner container">
           <li id="one_sq">
             <a href="#">
-              <div class="hover_prev"><img src="img/main/hover_prev1.png" alt=""></div>
-              <div class="hover_img"><img src="img/main/hover_10.png" alt=""></div>
+              <div class="hover_prev"><img src="img/main/hover_prev1.png" alt="hover_prev1"></div>
+              <div class="hover_img"><img src="img/main/hover_10.png" alt="hover_10"></div>
             </a>
           </li>
           <li id="two_sq">
             <a href="#">
-              <div class="hover_prev"><img src="img/main/hover_prev2.png" alt=""></div>
-              <div class="hover_img"><img src="img/main/hover_11.png" alt=""></div>
+              <div class="hover_prev"><img src="img/main/hover_prev2.png" alt="hover_prev2"></div>
+              <div class="hover_img"><img src="img/main/hover_11.png" alt="hover_11"></div>
             </a>
           </li>
           <li id="three_sq">
             <a href="#">
-              <div class="hover_prev"><img src="img/main/hover_prev3.png" alt=""></div>
-              <div class="hover_img"><img src="img/main/hover_12.png" alt=""></div>
+              <div class="hover_prev"><img src="img/main/hover_prev3.png" alt="hover_prev3"></div>
+              <div class="hover_img"><img src="img/main/hover_12.png" alt="hover_12"></div>
             </a>
           </li>
           <li id="four_sq">
             <a href="#">
-              <div class="hover_prev"><img src="img/main/hover_prev4.png" alt=""></div>
-              <div class="hover_img"><img src="img/main/hover_13.png" alt=""></div>
+              <div class="hover_prev"><img src="img/main/hover_prev4.png" alt="hover_prev4"></div>
+              <div class="hover_img"><img src="img/main/hover_13.png" alt="hover_13"></div>
             </a>
           </li>
         </ul>
@@ -578,40 +578,40 @@
               </div>
               <ul>
                 <li class="service_item">
-                  <a href="#"> <img src="img/main/icon1.png"> <span>내PC돌보미</span></a>
+                  <a href="#"> <img src="img/main/icon1.png" alt="icon1"> <span>내PC돌보미</span></a>
                 </li>
                 <li class="service_item">
-                  <a href="#"> <img src="img/main/icon2.png"> <span>중소기업홈페이지 보안강화</span></a>
+                  <a href="#"> <img src="img/main/icon2.png" alt="icon2"> <span>중소기업홈페이지 보안강화</span></a>
                 </li>
                 <li class="service_item">
-                  <a href="#"> <img src="img/main/icon3.png"> <span>다중이용 기업서비스 취약점 점검</span></a>
+                  <a href="#"> <img src="img/main/icon3.png" alt="icon3"> <span>다중이용 기업서비스 취약점 점검</span></a>
                 </li>
                 <li class="service_item">
-                  <a href="#"> <img src="img/main/icon4.png"> <span>중소기업 SW보안 약점 진단</span></a>
+                  <a href="#"> <img src="img/main/icon4.png" alt="icon4"> <span>중소기업 SW보안 약점 진단</span></a>
                 </li>
                 <li class="service_item">
-                  <a href="#"> <img src="img/main/icon5.png"> <span>사이버보안 빅데이터센터 이용</span></a>
+                  <a href="#"> <img src="img/main/icon5.png" alt="icon5"> <span>사이버보안 빅데이터센터 이용</span></a>
                 </li>
                 <li class="service_item">
-                  <a href="#"> <img src="img/main/icon6.png"> <span>정보보호전문서비스기업</span></a>
+                  <a href="#"> <img src="img/main/icon6.png" alt="icon6"> <span>정보보호전문서비스기업</span></a>
                 </li>
                 <li class="service_item">
-                  <a href="#"> <img src="img/main/icon7.png"> <span>정보보호 및 개인정보보호 관리체계 인증</span></a>
+                  <a href="#"> <img src="img/main/icon7.png" alt="icon7"> <span>정보보호 및 개인정보보호 관리체계 인증</span></a>
                 </li>
                 <li class="service_item">
-                  <a href="#"> <img src="img/main/icon8.png"> <span>클라우드 보안인증</span></a>
+                  <a href="#"> <img src="img/main/icon8.png" alt="icon8"> <span>클라우드 보안인증</span></a>
                 </li>
                 <li class="service_item">
-                  <a href="#"> <img src="img/main/icon9.png"> <span>융합보안리빙랩</span></a>
+                  <a href="#"> <img src="img/main/icon9.png" alt="icon9"> <span>융합보안리빙랩</span></a>
                 </li>
                 <li class="service_item">
-                  <a href="#"> <img src="img/main/icon10.png"> <span>loT보안인증</span></a>
+                  <a href="#"> <img src="img/main/icon10.png" alt="icon10"> <span>loT보안인증</span></a>
                 </li>
                 <li class="service_item">
-                  <a href="#"> <img src="img/main/icon11.png"> <span>loT보안 테스트베드</span></a>
+                  <a href="#"> <img src="img/main/icon11.png" alt="icon11"> <span>loT보안 테스트베드</span></a>
                 </li>
                 <li class="service_item">
-                  <a href="#"> <img src="img/main/icon12.png"> <span>KISA 사이버보안교육</span></a>
+                  <a href="#"> <img src="img/main/icon12.png" alt="icon12"> <span>KISA 사이버보안교육</span></a>
                 </li>
               </ul>
             </div>
