221212 유효성 검사 수정

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="한국인터넷진흥원">
     <meta name="robot" content="follow">
-    <meta name="description" content="강혜주의 반응형 프로젝트">
     <meta name="author" content="강혜주">
     <meta name="keyword" content="포트폴리오, 강혜주, 프론트엔드">
     <meta property="og:title" content="혜주의 포트폴리오">
@@ -20,7 +19,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;500;700;900&family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.7/jquery.fullpage.min.css" integrity="sha512-q54FvbV+gGBn+NvgaD4gpJ7w4wrO00DgW7Rx503PIhrf0CuMwLOwbS+bXgOBFSob+6GVy1HDPfaRLJ8w2jiS4g==" crossorigin="anonymous" referrerpolicy="no-referrer">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.7/jquery.fullpage.min.js" integrity="sha512-bxzECOBohzcTcWocMAlNDE2kYs0QgwGs4eD8TlAN2vfovq13kfDfp95sJSZrNpt0VMkpP93ZxLC/+WN/7Trw2g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.7/jquery.fullpage.min.js" crossorigin="anonymous"></script>
     <title>KISA 한국인터넷진흥원</title>
     <!-- favicon -->
     <link rel="shortcut icon" href="./img/logo/favicon.ico" type="image/x-icon">
@@ -540,7 +539,7 @@
                 <a href="#" class="search_b">기술안내서</a>
               </div>
               <div class="small2_img">
-                <img src="img/main/ic_ knowledge_1.png" alt="knowledge_1">
+                <img src="./img/main/ic_ knowledge_1.png" alt="knowledge_1">
               </div>
             </div>
           </div>
@@ -863,20 +862,19 @@
                   <li><a href="#">KR</a></li>
                   <li><a href="#">ENG</a></li>
                 </ul>
-                  <ul class="sns">
-                    <li>
-                      <a href="#"><i class="ri-kakao-talk-fill"></i></a>
-                    </li>
-                    <li>
-                      <a href="#"><i class="ri-youtube-fill"></i></a>
-                    </li>
-                    <li>
-                      <a href="#"><i class="ri-message-2-fill"></i></a>
-                    </li>
-                    <li>
-                      <a href="#"><i class="ri-facebook-fill"></i></a>
-                    </li>
-                  </ul>
+                <ul class="sns">
+                  <li>
+                    <a href="#"><i class="ri-kakao-talk-fill"></i></a>
+                  </li>
+                  <li>
+                    <a href="#"><i class="ri-youtube-fill"></i></a>
+                  </li>
+                  <li>
+                    <a href="#"><i class="ri-message-2-fill"></i></a>
+                  </li>
+                  <li>
+                    <a href="#"><i class="ri-facebook-fill"></i></a>
+                  </li>
                 </ul>
               </div>
             </div>
