221212 이미지 이름 유효성 검사 수정

--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
                 <a href="#" class="search_b">기술안내서</a>
               </div>
               <div class="small2_img">
-                <img src="./img/main/ic_ knowledge_1.png" alt="knowledge_1">
+                <img src="./img/main/ic_knowledge_1.png" alt="knowledge_1">
               </div>
             </div>
           </div>
