--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
       <section class="section first">
         <ul class="main_slide_wrapper">
           <li class="main_slide1 main_slide_item active">
-            <img src="img/main/main_slide_01.jpg" alt="1" />
+            <img src="img/main/main_slide_01.jpg" alt="main_slide_01" />
             <div class="slide_text">
               <span class="slide_p">Korea Internet & Security Agency</span>
               <p class="main_slide_p">
@@ -430,7 +430,7 @@
             </div>
           </li>
           <li class="main_slide2 main_slide_item">
-            <img src="img/main/main_slide_02.jpg" alt="2" />
+            <img src="img/main/main_slide_02.jpg" alt="main_slide_02" />
             <div class="slide_text">
               <span class="slide_p">Korea Internet & Security Agency</span>
               <p class="main_slide_p">
@@ -440,7 +440,7 @@
             </div>
           </li>
           <li class="main_slide3 main_slide_item">
-            <img src="img/main/main_slide_03.jpg" alt="3" />
+            <img src="img/main/main_slide_03.jpg" alt="main_slide_03" />
             <div class="slide_text">
               <span class="slide_p">Korea Internet & Security Agency</span>
               <p class="main_slide_p">
