--- a/index.html
+++ b/index.html
@@ -1057,6 +1057,48 @@
               </div>
             </div>
           </div>
+          <div class="footer_bottom">
+            <div class="container">
+              <div class="left">
+                <div class="address">
+                  <span>[나주본원] (58324) 전라남도 나주시 진흥길 9 한국인터넷진흥원</span>
+                  <span>[서울청사] (05717) 서울시 송파구 중대로 135 (가락동) IT벤처타워</span>
+                </div>
+                <div class="number">
+                  <span>대표번호 : <a href="#">1433-25</a>(수신자 요금 부담)</span>
+                  <span>[해킹ㆍ스팸개인정보침해 신고 <a href="#">118</a>]</span>
+                </div>
+                <span class="copy">Copyright(C) 2021 KISA. All rights reserved.</span>
+              </div>
+              <div class="right">
+                <div class=trans_site_wrap"">
+                  <div class="trans_site blind">
+                    <ul>
+                      <li>정부ㆍ유관기관</li>
+                      <li>-- 정부기관 --</li>
+                      <li>과학기술정보통신부</li>
+                      <li>행정안전부</li>
+                      <li>방송통신위원회</li>
+                      <li>개인정보보호위원회</li>
+                      <li>-------------</li>
+                      <li>-- 유관기관 --</li>
+                      <li>정보통신산업진흥원</li>
+                      <li>정보통신정책연구원</li>
+                      <li>한국방송통신전파진흥원</li>
+                      <li>한국지능정보사회진흥원</li>
+                      <li>한국지능정보사회진흥원</li>
+                      <li>한국정보보호산업협회</li>
+                    </ul>
+                  </div>
+                  <button class="trans_btn">이동</button>
+                </div>
+                <div class="footer_icon_wrapper">
+                  <img src="" alt="보다 나은 정부">
+                  <img src="" alt="웹 접근성 마크">
+                </div>
+              </div>
+            </div>
+          </div>
         </footer>
       </section>
     </div>
