221213 footer select 추가

--- a/index.html
+++ b/index.html
@@ -1071,26 +1071,25 @@
                 <span class="copy">Copyright(C) 2021 KISA. All rights reserved.</span>
               </div>
               <div class="right">
-                <div class=trans_site_wrap"">
-                  <div class="trans_site blind">
-                    <ul>
-                      <li>정부ㆍ유관기관</li>
-                      <li>-- 정부기관 --</li>
-                      <li>과학기술정보통신부</li>
-                      <li>행정안전부</li>
-                      <li>방송통신위원회</li>
-                      <li>개인정보보호위원회</li>
-                      <li>-------------</li>
-                      <li>-- 유관기관 --</li>
-                      <li>정보통신산업진흥원</li>
-                      <li>정보통신정책연구원</li>
-                      <li>한국방송통신전파진흥원</li>
-                      <li>한국지능정보사회진흥원</li>
-                      <li>한국지능정보사회진흥원</li>
-                      <li>한국정보보호산업협회</li>
-                    </ul>
+                <div class="trans_site_wrap">
+                  <div class="trans_site">
+                    <select name="trans_site" id="trans_site">
+                      <option value="정부ㆍ유관기관">정부ㆍ유관기관</option>
+                      <option value="-- 정부기관 --">-- 정부기관 --</option>
+                      <option value="과학기술정보통신부">과학기술정보통신부</option>
+                      <option value="행정안전부">행정안전부</option>
+                      <option value="방송통신위원회">방송통신위원회</option>
+                      <option value="개인정보보호위원회">개인정보보호위원회</option>
+                      <option value="-------------">-------------</option>
+                      <option value="-- 유관기관 --">-- 유관기관 --</option>
+                      <option value="정보통신산업진흥원">정보통신산업진흥원</option>
+                      <option value="정보통신정책연구원">정보통신정책연구원</option>
+                      <option value="한국방송통신전파진흥원">한국방송통신전파진흥원</option>
+                      <option value="한국지능정보사회진흥원">한국지능정보사회진흥원</option>
+                      <option value="한국정보보호산업협회">한국정보보호산업협회</option>
+                    </select>
+                    <button class="trans_btn">이동</button>
                   </div>
-                  <button class="trans_btn">이동</button>
                 </div>
                 <div class="footer_icon_wrapper">
                   <img src="" alt="보다 나은 정부">
